syntax = "proto3";

package ibc.lightclients.mock.v1;

import "solidity-protobuf-extensions.proto";
import "client/Client.proto";

option go_package = "github.com/hyperledger-labs/yui-ibc-solidity/pkg/ibc/client/mock";
option (.solidity.file_options) = { dirpath: "contracts/core/types" };

message ClientState {
  Height latest_height = 1;
}

message ConsensusState {
  uint64 timestamp = 1;
}

message Header {
  Height height = 1;
  uint64 timestamp = 2;
}
